// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > No optimization 1`] = `
"😀,(000c.0)😃,(0014.0)😄,(001c.0)😁,(0024.0)⏎          > 😀😃😄😁
😆,(0025.0)🥹,(002d.0)😅,(0035.0)😂,(003d.0)⏎          > 😆🥹😅😂
😇,(005d.0)🙂,(0065.0)🙃,(006d.0)😉,(0075.0)⏎          > 😇🙂🙃😉
🤣,(0040.0)🥲,(0048.0)☺,(004e.0)️,(0054.0)😊,(005c.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > With optimization 1`] = `
"😀,(0019.0)😃,(0011.0)😄,(0009.0)😁,(0002.0)⏎          > 😀😃😄😁
😆,(0031.0)🥹,(0029.0)😅,(0021.0)😂,(0002.0)⏎          > 😆🥹😅😂
😇,(0049.0)🙂,(0041.0)🙃,(0039.0)😉,(0002.0)⏎          > 😇🙂🙃😉
🤣,(0069.0)🥲,(0061.0)☺,(005b.0)️,(0055.0)😊,(0002.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > With optimization and string table 1`] = `
"😀,(0008.0)😃,(0006.2)😄,(0004.1)😁,(0003.0)⏎          > 😀😃😄😁
😆,(000e.0)🥹,(000c.2)😅,(000a.1)😂,(0003.0)⏎          > 😆🥹😅😂
😇,(0014.0)🙂,(0012.2)🙃,(0010.1)😉,(0003.0)⏎          > 😇🙂🙃😉
🤣,(001e.1)🥲,(001c.0)☺,(001c.3)️,(001a.1)😊,(0003.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > No optimization 1`] = `
"o,(0005.0)p,(0007.0)t,(0009.0)i,(000b.0)m,(000d.0)i,(000f.0)z,(0011.0)a,(0013.0)t,(0015.0)i,(0017.0)o,(0019.0)n,(0004.0)⏎ > optimization
s,(0029.0)e,(002b.0)n,(002d.0)s,(002f.0)a,(0031.0)t,(0033.0)i,(0035.0)o,(0037.0)n,(0004.0)⏎                               > sensation
v,(001b.0)a,(001d.0)c,(001f.0)a,(0021.0)t,(0023.0)i,(0025.0)o,(0027.0)n,(0004.0)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > With optimization 1`] = `
"o,(0019.0)p,(0017.0)t,(0015.0)i,(0013.0)m,(0011.0)i,(000f.0)z,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎ > optimization
s,(001f.0)e,(001d.0)n,(001b.0)s,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎                               > sensation
v,(0023.0)a,(0021.0)c,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > With optimization and string table 1`] = `
"o,(0008.0)p,(0006.0)t,(0006.1)i,(0006.2)m,(0006.3)i,(0006.4)z,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎ > optimization
s,(000a.0)e,(000a.1)n,(000a.2)s,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎                               > sensation
v,(000c.0)a,(000c.1)c,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > No optimization 1`] = `
"o,(0003.0)p,(0005.0)t,(0007.0)i,(0009.0)m,(000b.0)i,(000d.0)z,(000f.0)a,(0012.0)t,(0014.0)i,(0016.0)o,(0018.0)n,(0002.0)⏎ > optimization
----------------------------------------------------------------------e,(0002.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > With optimization 1`] = `
"o,(0018.0)p,(0016.0)t,(0014.0)i,(0012.0)m,(0010.0)i,(000e.0)z,(000b.0)a,(0009.0)t,(0007.0)i,(0005.0)o,(0003.0)n,(0002.0)⏎ > optimization
----------------------------------------------------------------------e,(0002.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > With optimization and string table 1`] = `
"o,(0000.1)p,(0000.2)t,(0005.0)i,(0005.1)m,(0005.2)i,(0005.3)z,(0005.4)a,(0003.0)t,(0003.1)i,(0003.2)o,(0003.3)n,(0002.0)⏎ > optimization
----------------------------------------------------------------------e,(0002.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(97) ] > No optimization 1`] = `
"A,(0509.0)B,(050b.0)C,(050d.0)D,(050f.0)E,(0511.0)F,(0513.0)G,(0515.0)H,(0022.0)⏎                                                   > ABCDEFGH
H,(0023.0)e,(0025.0)r,(0027.0)e,(0022.0)⏎                                                                                           > Here
I,(0517.0)J,(0519.0)K,(051b.0)L,(051d.0)M,(051f.0)N,(0521.0)O,(0523.0)P,(0022.0)⏎                                                   > IJKLMNOP
Q,(0525.0)R,(0527.0)S,(0529.0)T,(052b.0)U,(052d.0)V,(052f.0)W,(0531.0)X,(0022.0)⏎                                                   > QRSTUVWX
T,(005a.0)h,(005c.0)e,(005e.0)y,(0022.0)⏎                                                                                           > They
Y,(0533.0)Z,(0022.0)⏎                                                                                                               > YZ
^,(0022.0)⏎                                                                                                                         > ^
\`,(0022.0)⏎                                                                                                                         > \`
a,(0029.0)⏎                                                                                                                         > a
----------b,(0535.0)c,(0537.0)d,(0539.0)e,(053b.0)f,(053d.0)g,(053f.0)h,(0022.0)⏎                                                   > abcdefgh
----------n,(00d6.0)d,(0022.0)⏎                                                                                                     > and
----------r,(002e.0)e,(0022.0)⏎                                                                                                     > are
----------s,(0022.0)⏎                                                                                                               > as
b,(006c.0)e,(0022.0)⏎                                                                                                               > be
----------l,(00af.0)u,(00b1.0)e,(0022.0)⏎                                                                                           > blue
c,(00d8.0)s,(00da.0)p,(00dc.0)e,(00de.0)l,(00e0.0)l,(0022.0)⏎                                                                       > cspell
d,(0046.0)a,(00d1.0)r,(00d4.0)k,(0022.0)⏎                                                                                           > dark
--------------------y,(0022.0)⏎                                                                                                     > day
----------i,(0049.0)c,(004c.0)t,(004e.0)i,(0050.0)o,(0052.0)n,(0054.0)a,(0056.0)r,(0058.0)y,(0022.0)⏎                               > dictionary
--------------------s,(00e2.0)a,(00e4.0)b,(00e6.0)l,(00e8.0)e,(0022.0)⏎                                                             > disable
e,(04ff.0)n,(0501.0)a,(0503.0)b,(0505.0)l,(0507.0)e,(0022.0)⏎                                                                       > enable
f,(0030.0)e,(0033.0)w,(0022.0)⏎                                                                                                     > few
----------i,(00cb.0)r,(00cd.0)s,(00cf.0)t,(0022.0)⏎                                                                                 > first
g,(00a7.0)r,(00a9.0)e,(00ab.0)e,(00ad.0)n,(0022.0)⏎                                                                                 > green
i,(0541.0)j,(0543.0)k,(0545.0)l,(0547.0)m,(0549.0)n,(054b.0)o,(054d.0)p,(0022.0)⏎                                                   > ijklmnop
j,(0060.0)u,(0062.0)s,(0064.0)t,(0022.0)⏎                                                                                           > just
n,(0066.0)e,(0068.0)e,(006a.0)d,(0022.0)⏎                                                                                           > need
o,(00bd.0)f,(0022.0)⏎                                                                                                               > of
----------n,(0022.0)⏎                                                                                                               > on
----------r,(00c1.0)a,(00c3.0)n,(00c5.0)g,(00c7.0)e,(0022.0)⏎                                                                       > orange
p,(0093.0)l,(0095.0)a,(0097.0)y,(0099.0)⏎                                                                                           > play
----------------------------------------e,(009c.0)d,(0022.0)⏎                                                                       > played
--------------------------------------------------r,(0022.0)⏎                                                                       > player
----------------------------------------i,(009f.0)n,(00a1.0)g,(0022.0)⏎                                                             > playing
q,(054f.0)r,(0551.0)s,(0553.0)t,(0555.0)u,(0557.0)v,(0559.0)w,(055b.0)x,(055d.0)ἀ,(0022.0)⏎                                         > qrstuvwxἀ
r,(00a3.0)e,(00a5.0)d,(0022.0)⏎                                                                                                     > red
s,(006f.0)p,(0071.0)l,(0073.0)i,(0075.0)t,(0022.0)⏎                                                                                 > split
t,(003e.0)a,(0085.0)l,(0087.0)k,(0089.0)⏎                                                                                           > talk
----------------------------------------e,(008c.0)d,(0022.0)⏎                                                                       > talked
--------------------------------------------------r,(0022.0)⏎                                                                       > talker
----------------------------------------i,(008f.0)n,(0091.0)g,(0022.0)⏎                                                             > talking
----------h,(00c9.0)e,(0022.0)⏎                                                                                                     > the
----------o,(0022.0)⏎                                                                                                               > to
u,(0042.0)s,(0044.0)e,(0022.0)⏎                                                                                                     > use
w,(0035.0)a,(0077.0)l,(0079.0)k,(007b.0)⏎                                                                                           > walk
----------------------------------------e,(007e.0)d,(0022.0)⏎                                                                       > walked
--------------------------------------------------r,(0022.0)⏎                                                                       > walker
----------------------------------------i,(0081.0)n,(0083.0)g,(0022.0)⏎                                                             > walking
----------o,(0038.0)r,(003a.0)d,(003c.0)s,(0022.0)⏎                                                                                 > words
y,(00b3.0)e,(00b5.0)l,(00b7.0)l,(00b9.0)o,(00bb.0)w,(0022.0)⏎                                                                       > yellow
Έ,(0994.0)Ὴ,(099a.0)Ή,(099e.0)ῌ,(09a4.0)῍,(09aa.0)῎,(09b0.0)῏,(09b6.0)ῐ,(0022.0)⏎                                                   > ΈῊΉῌ῍῎῏ῐ
ά,(07c2.0)ὲ,(07c8.0)έ,(07cc.0)ὴ,(07d2.0)ή,(07d6.0)ὶ,(07dc.0)ί,(07e0.0)ὸ,(0022.0)⏎                                                   > άὲέὴήὶίὸ
ό,(07e8.0)ὺ,(07ee.0)ύ,(07f2.0)ὼ,(07f8.0)ώ,(07fc.0)὾,(0802.0)὿,(0808.0)ᾀ,(0022.0)⏎                                                   > όὺύὼώ὾὿ᾀ
ພ,(011f.0)າ,(0125.0)ສ,(012b.0)າ,(0131.0)ລ,(0137.0)າ,(013d.0)ວ,(0022.0)⏎                                                             > ພາສາລາວ
ት,(00f5.0)ግ,(00fb.0)ር,(0101.0)ኛ,(0022.0)⏎                                                                                           > ትግርኛ
አ,(0109.0)ማ,(010f.0)ር,(0115.0)ኛ,(0022.0)⏎                                                                                           > አማርኛ
ᐃ,(015c.0)ᓄ,(0162.0)ᒃ,(0168.0)ᑎ,(016e.0)ᑐ,(0174.0)ᑦ,(0022.0)⏎                                                                       > ᐃᓄᒃᑎᑐᑦ
ᐊ,(017a.0)ᓂ,(0180.0)ᔑ,(0186.0)ᓈ,(018c.0)ᐯ,(0192.0)ᒧ,(0198.0)ᐎ,(019e.0)ᓐ,(0022.0)⏎                                                   > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(01a6.0)ᐦ,(01ac.0)ᐃ,(01b2.0)ᔭ,(01b8.0)ᐍ,(01be.0)ᐏ,(01c4.0)ᐣ,(0022.0)⏎                                                             > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(056c.0)ἂ,(0572.0)ἃ,(0578.0)ἄ,(057e.0)ἅ,(0584.0)ἆ,(058a.0)ἇ,(0590.0)Ἀ,(0022.0)⏎                                                   > ἁἂἃἄἅἆἇἈ
Ἁ,(0596.0)Ἂ,(059c.0)Ἃ,(05a2.0)Ἄ,(05a8.0)Ἅ,(05ae.0)Ἆ,(05b4.0)Ἇ,(05ba.0)ἐ,(0022.0)⏎                                                   > ἉἊἋἌἍἎἏἐ
ἑ,(05c0.0)ἒ,(05c6.0)ἓ,(05cc.0)ἔ,(05d2.0)ἕ,(05d8.0)἖,(05de.0)἗,(05e4.0)Ἐ,(0022.0)⏎                                                   > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(05ea.0)Ἒ,(05f0.0)Ἓ,(05f6.0)Ἔ,(05fc.0)Ἕ,(0602.0)἞,(0608.0)἟,(060e.0)ἠ,(0022.0)⏎                                                   > ἙἚἛἜἝ἞἟ἠ
ἡ,(0614.0)ἢ,(061a.0)ἣ,(0620.0)ἤ,(0626.0)ἥ,(062c.0)ἦ,(0632.0)ἧ,(0638.0)Ἠ,(0022.0)⏎                                                   > ἡἢἣἤἥἦἧἨ
Ἡ,(063e.0)Ἢ,(0644.0)Ἣ,(064a.0)Ἤ,(0650.0)Ἥ,(0656.0)Ἦ,(065c.0)Ἧ,(0662.0)ἰ,(0022.0)⏎                                                   > ἩἪἫἬἭἮἯἰ
ἱ,(0668.0)ἲ,(066e.0)ἳ,(0674.0)ἴ,(067a.0)ἵ,(0680.0)ἶ,(0686.0)ἷ,(068c.0)Ἰ,(0022.0)⏎                                                   > ἱἲἳἴἵἶἷἸ
Ἱ,(0692.0)Ἲ,(0698.0)Ἳ,(069e.0)Ἴ,(06a4.0)Ἵ,(06aa.0)Ἶ,(06b0.0)Ἷ,(06b6.0)ὀ,(0022.0)⏎                                                   > ἹἺἻἼἽἾἿὀ
ὁ,(06c3.0)ὂ,(06c9.0)ὃ,(06cf.0)ὄ,(06d5.0)ὅ,(06db.0)὆,(06e1.0)὇,(06e7.0)Ὀ,(0022.0)⏎                                                   > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(06ed.0)Ὂ,(06f3.0)Ὃ,(06f9.0)Ὄ,(06ff.0)Ὅ,(0705.0)὎,(070b.0)὏,(0711.0)ὐ,(0022.0)⏎                                                   > ὉὊὋὌὍ὎὏ὐ
ὑ,(0717.0)ὒ,(071d.0)ὓ,(0723.0)ὔ,(0729.0)ὕ,(072f.0)ὖ,(0735.0)ὗ,(073b.0)὘,(0022.0)⏎                                                   > ὑὒὓὔὕὖὗ὘
Ὑ,(0741.0)὚,(0747.0)Ὓ,(074d.0)὜,(0753.0)Ὕ,(0759.0)὞,(075f.0)Ὗ,(0765.0)ὠ,(0022.0)⏎                                                   > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(076b.0)ὢ,(0771.0)ὣ,(0777.0)ὤ,(077d.0)ὥ,(0783.0)ὦ,(0789.0)ὧ,(078f.0)Ὠ,(0022.0)⏎                                                   > ὡὢὣὤὥὦὧὨ
Ὡ,(0795.0)Ὢ,(079b.0)Ὣ,(07a1.0)Ὤ,(07a7.0)Ὥ,(07ad.0)Ὦ,(07b3.0)Ὧ,(07b9.0)ὰ,(0022.0)⏎                                                   > ὩὪὫὬὭὮὯὰ
ᾁ,(0817.0)ᾂ,(081d.0)ᾃ,(0823.0)ᾄ,(0829.0)ᾅ,(082f.0)ᾆ,(0835.0)ᾇ,(083b.0)ᾈ,(0022.0)⏎                                                   > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(0841.0)ᾊ,(0847.0)ᾋ,(084d.0)ᾌ,(0853.0)ᾍ,(0859.0)ᾎ,(085f.0)ᾏ,(0865.0)ᾐ,(0022.0)⏎                                                   > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(086b.0)ᾒ,(0871.0)ᾓ,(0877.0)ᾔ,(087d.0)ᾕ,(0883.0)ᾖ,(0889.0)ᾗ,(088f.0)ᾘ,(0022.0)⏎                                                   > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(0895.0)ᾚ,(089b.0)ᾛ,(08a1.0)ᾜ,(08a7.0)ᾝ,(08ad.0)ᾞ,(08b3.0)ᾟ,(08b9.0)ᾠ,(0022.0)⏎                                                   > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(08bf.0)ᾢ,(08c5.0)ᾣ,(08cb.0)ᾤ,(08d1.0)ᾥ,(08d7.0)ᾦ,(08dd.0)ᾧ,(08e3.0)ᾨ,(0022.0)⏎                                                   > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(08e9.0)ᾪ,(08ef.0)ᾫ,(08f5.0)ᾬ,(08fb.0)ᾭ,(0901.0)ᾮ,(0907.0)ᾯ,(090d.0)ᾰ,(0022.0)⏎                                                   > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(0913.0)ᾲ,(0919.0)ᾳ,(091f.0)ᾴ,(0925.0)᾵,(092b.0)ᾶ,(0931.0)ᾷ,(0937.0)Ᾰ,(0022.0)⏎                                                   > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(093d.0)Ὰ,(0943.0)Ά,(0947.0)ᾼ,(094d.0)᾽,(0953.0)ι,(0957.0)᾿,(095d.0)῀,(0022.0)⏎                                                   > ᾹᾺΆᾼ᾽ι᾿῀
῁,(096a.0)ῂ,(0970.0)ῃ,(0976.0)ῄ,(097c.0)῅,(0982.0)ῆ,(0988.0)ῇ,(098e.0)Ὲ,(0022.0)⏎                                                   > ῁ῂῃῄ῅ῆῇῈ
ῑ,(09bc.0)ῒ,(09c2.0)ΐ,(09c6.0)῔,(09cc.0)῕,(09d2.0)ῖ,(09d8.0)ῗ,(09de.0)Ῐ,(0022.0)⏎                                                   > ῑῒΐ῔῕ῖῗῘ
Ῑ,(09e4.0)Ὶ,(09ea.0)Ί,(09ee.0)῜,(09f4.0)῝,(09fa.0)῞,(0a00.0)῟,(0a06.0)ῠ,(0022.0)⏎                                                   > ῙῚΊ῜῝῞῟ῠ
ῡ,(0a0c.0)ῢ,(0a12.0)ΰ,(0a16.0)ῤ,(0a1c.0)ῥ,(0a22.0)ῦ,(0a28.0)ῧ,(0a2e.0)Ῠ,(0022.0)⏎                                                   > ῡῢΰῤῥῦῧῨ
Ῡ,(0a34.0)Ὺ,(0a3a.0)Ύ,(0a3e.0)Ῥ,(0a44.0)῭,(0a4a.0)΅,(0a4e.0)\`,(0a50.0)῰,(0022.0)⏎                                                   > ῩῪΎῬ῭΅\`῰
῱,(0a56.0)ῲ,(0a5c.0)ῳ,(0a62.0)ῴ,(0a68.0)῵,(0a6e.0)ῶ,(0a74.0)ῷ,(0a7a.0)Ὸ,(0022.0)⏎                                                   > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(0147.0)ꦱ,(014d.0)ꦗ,(0153.0)ꦮ,(0022.0)⏎                                                                                           > ꦧꦱꦗꦮ
😀,(01d7.0)😃,(01df.0)😄,(01e7.0)😁,(01ef.0)😆,(01f7.0)🥹,(01ff.0)😅,(0207.0)😂,(020f.0)⏎                                           > 😀😃😄😁😆🥹😅😂
😌,(0253.0)😍,(025b.0)🥰,(0263.0)😘,(026b.0)😗,(0273.0)😙,(027b.0)😚,(0283.0)😋,(028b.0)⏎                                           > 😌😍🥰😘😗😙😚😋
😕,(0301.0)🙁,(0309.0)☹,(030f.0)️,(0315.0)😣,(031d.0)😖,(0325.0)😫,(032d.0)😩,(0335.0)🥺,(033d.0)⏎                                  > 😕🙁☹️😣😖😫😩🥺
😛,(028c.0)😝,(0294.0)😜,(029c.0)🤪,(02a4.0)🤨,(02ac.0)🧐,(02b4.0)🤓,(02bc.0)😎,(02c4.0)⏎                                           > 😛😝😜🤪🤨🧐🤓😎
😢,(033e.0)😭,(0346.0)😤,(034e.0)😠,(0356.0)😡,(035e.0)🤬,(0366.0)🤯,(036e.0)😳,(0376.0)⏎                                           > 😢😭😤😠😡🤬🤯😳
🙄,(0438.0)😯,(0440.0)😦,(0448.0)😧,(0450.0)😮,(0458.0)😲,(0460.0)🥱,(0468.0)😴,(0470.0)⏎                                           > 🙄😯😦😧😮😲🥱😴
🤗,(03c4.0)🤔,(03cc.0)🫣,(03d4.0)🤭,(03dc.0)🫢,(03e4.0)🫡,(03ec.0)🤫,(03f4.0)🫠,(03fc.0)⏎                                           > 🤗🤔🫣🤭🫢🫡🤫🫠
🤣,(0216.0)🥲,(021e.0)☺,(0224.0)️,(022a.0)😊,(0232.0)😇,(023a.0)🙂,(0242.0)🙃,(024a.0)😉,(0252.0)⏎                                  > 🤣🥲☺️😊😇🙂🙃😉
🤤,(0471.0)😪,(0479.0)😮,(0481.0)‍,(0487.0)💨,(048f.0)😵,(0497.0)😵,(049f.0)‍,(04a5.0)💫,(04ad.0)🤐,(04b5.0)🥴,(04bd.0)🤢,(04c5.0)⏎ > 🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤥,(03fd.0)😶,(0405.0)🫥,(040d.0)😐,(0415.0)🫤,(041d.0)😑,(0425.0)🫨,(042d.0)😬,(0435.0)⏎                                           > 🤥😶🫥😐🫤😑🫨😬
🤮,(04c6.0)🤧,(04ce.0)😷,(04d6.0)🤒,(04de.0)🤕,(04e6.0)🤑,(04ee.0)🤠,(04f6.0)😈,(04fe.0)⏎                                           > 🤮🤧😷🤒🤕🤑🤠😈
🥵,(0377.0)🥶,(037f.0)😶,(0387.0)‍,(038d.0)🌫,(0395.0)️,(039b.0)😱,(03a3.0)😨,(03ab.0)😰,(03b3.0)😥,(03bb.0)😓,(03c3.0)⏎            > 🥵🥶😶‍🌫️😱😨😰😥😓
🥸,(02c8.0)🤩,(02d0.0)🥳,(02d8.0)😏,(02e0.0)😒,(02e8.0)😞,(02f0.0)😔,(02f8.0)😟,(0300.0)⏎                                           > 🥸🤩🥳😏😒😞😔😟"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(97) ] > With optimization 1`] = `
"A,(002f.0)B,(002d.0)C,(002b.0)D,(0029.0)E,(0027.0)F,(0025.0)G,(0023.0)H,(0022.0)⏎                                                   > ABCDEFGH
H,(0035.0)e,(0033.0)r,(0031.0)e,(0022.0)⏎                                                                                           > Here
I,(0043.0)J,(0041.0)K,(003f.0)L,(003d.0)M,(003b.0)N,(0039.0)O,(0037.0)P,(0022.0)⏎                                                   > IJKLMNOP
Q,(0051.0)R,(004f.0)S,(004d.0)T,(004b.0)U,(0049.0)V,(0047.0)W,(0045.0)X,(0022.0)⏎                                                   > QRSTUVWX
T,(0057.0)h,(0055.0)e,(0053.0)y,(0022.0)⏎                                                                                           > They
Y,(0059.0)Z,(0022.0)⏎                                                                                                               > YZ
^,(0022.0)⏎                                                                                                                         > ^
\`,(0022.0)⏎                                                                                                                         > \`
a,(0069.0)⏎                                                                                                                         > a
----------b,(0065.0)c,(0063.0)d,(0061.0)e,(005f.0)f,(005d.0)g,(005b.0)h,(0022.0)⏎                                                   > abcdefgh
----------n,(0067.0)d,(0022.0)⏎                                                                                                     > and
----------r,(0031.0)e,(0022.0)⏎                                                                                                     > are
----------s,(0022.0)⏎                                                                                                               > as
b,(0070.0)e,(0022.0)⏎                                                                                                               > be
----------l,(006e.0)u,(0031.0)e,(0022.0)⏎                                                                                           > blue
c,(007b.0)s,(0079.0)p,(0077.0)e,(0075.0)l,(0073.0)l,(0022.0)⏎                                                                       > cspell
d,(0097.0)a,(007f.0)r,(007d.0)k,(0022.0)⏎                                                                                           > dark
--------------------y,(0022.0)⏎                                                                                                     > day
----------i,(0094.0)c,(008c.0)t,(008a.0)i,(0088.0)o,(0086.0)n,(0084.0)a,(0082.0)r,(0053.0)y,(0022.0)⏎                               > dictionary
--------------------s,(0092.0)a,(0090.0)b,(008e.0)l,(0031.0)e,(0022.0)⏎                                                             > disable
e,(009a.0)n,(0092.0)a,(0090.0)b,(008e.0)l,(0031.0)e,(0022.0)⏎                                                                       > enable
f,(00a4.0)e,(009c.0)w,(0022.0)⏎                                                                                                     > few
----------i,(00a2.0)r,(00a0.0)s,(009e.0)t,(0022.0)⏎                                                                                 > first
g,(00ad.0)r,(00ab.0)e,(00a9.0)e,(00a7.0)n,(0022.0)⏎                                                                                 > green
i,(00bb.0)j,(00b9.0)k,(00b7.0)l,(00b5.0)m,(00b3.0)n,(00b1.0)o,(00af.0)p,(0022.0)⏎                                                   > ijklmnop
j,(00bd.0)u,(00a0.0)s,(009e.0)t,(0022.0)⏎                                                                                           > just
n,(00c1.0)e,(00bf.0)e,(0067.0)d,(0022.0)⏎                                                                                           > need
o,(00c9.0)f,(0022.0)⏎                                                                                                               > of
----------n,(0022.0)⏎                                                                                                               > on
----------r,(00c7.0)a,(00c5.0)n,(00c3.0)g,(0031.0)e,(0022.0)⏎                                                                       > orange
p,(00db.0)l,(00d9.0)a,(00d7.0)y,(00d4.0)⏎                                                                                           > play
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                       > played
--------------------------------------------------r,(0022.0)⏎                                                                       > player
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                             > playing
q,(00ef.0)r,(00ed.0)s,(00eb.0)t,(00e9.0)u,(00e7.0)v,(00e5.0)w,(00e3.0)x,(00e1.0)ἀ,(0022.0)⏎                                         > qrstuvwxἀ
r,(00bf.0)e,(0067.0)d,(0022.0)⏎                                                                                                     > red
s,(00f5.0)p,(00f3.0)l,(00f1.0)i,(009e.0)t,(0022.0)⏎                                                                                 > split
t,(00fb.0)a,(00f9.0)l,(00f7.0)k,(00d4.0)⏎                                                                                           > talk
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                       > talked
--------------------------------------------------r,(0022.0)⏎                                                                       > talker
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                             > talking
----------h,(0031.0)e,(0022.0)⏎                                                                                                     > the
----------o,(0022.0)⏎                                                                                                               > to
u,(00ff.0)s,(0031.0)e,(0022.0)⏎                                                                                                     > use
w,(0107.0)a,(00f9.0)l,(00f7.0)k,(00d4.0)⏎                                                                                           > walk
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                       > walked
--------------------------------------------------r,(0022.0)⏎                                                                       > walker
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                             > walking
----------o,(0105.0)r,(0103.0)d,(0101.0)s,(0022.0)⏎                                                                                 > words
y,(0110.0)e,(010e.0)l,(010c.0)l,(010a.0)o,(009c.0)w,(0022.0)⏎                                                                       > yellow
Έ,(0138.0)Ὴ,(0132.0)Ή,(012e.0)ῌ,(0128.0)῍,(0122.0)῎,(011c.0)῏,(0116.0)ῐ,(0022.0)⏎                                                   > ΈῊΉῌ῍῎῏ῐ
ά,(015c.0)ὲ,(0156.0)έ,(0152.0)ὴ,(014c.0)ή,(0148.0)ὶ,(0142.0)ί,(013e.0)ὸ,(0022.0)⏎                                                   > άὲέὴήὶίὸ
ό,(0183.0)ὺ,(017d.0)ύ,(0179.0)ὼ,(0173.0)ώ,(016f.0)὾,(0169.0)὿,(0163.0)ᾀ,(0022.0)⏎                                                   > όὺύὼώ὾὿ᾀ
ພ,(01a9.0)າ,(01a3.0)ສ,(019d.0)າ,(0197.0)ລ,(0191.0)າ,(018b.0)ວ,(0022.0)⏎                                                             > ພາສາລາວ
ት,(01bf.0)ግ,(01b9.0)ር,(01b3.0)ኛ,(0022.0)⏎                                                                                           > ትግርኛ
አ,(01c7.0)ማ,(01b9.0)ር,(01b3.0)ኛ,(0022.0)⏎                                                                                           > አማርኛ
ᐃ,(01e7.0)ᓄ,(01e1.0)ᒃ,(01db.0)ᑎ,(01d5.0)ᑐ,(01cf.0)ᑦ,(0022.0)⏎                                                                       > ᐃᓄᒃᑎᑐᑦ
ᐊ,(020f.0)ᓂ,(0209.0)ᔑ,(0203.0)ᓈ,(01fd.0)ᐯ,(01f7.0)ᒧ,(01f1.0)ᐎ,(01eb.0)ᓐ,(0022.0)⏎                                                   > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(0236.0)ᐦ,(0230.0)ᐃ,(022a.0)ᔭ,(0224.0)ᐍ,(021e.0)ᐏ,(0218.0)ᐣ,(0022.0)⏎                                                             > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(0262.0)ἂ,(025c.0)ἃ,(0256.0)ἄ,(0250.0)ἅ,(024a.0)ἆ,(0244.0)ἇ,(023e.0)Ἀ,(0022.0)⏎                                                   > ἁἂἃἄἅἆἇἈ
Ἁ,(028a.0)Ἂ,(0284.0)Ἃ,(027e.0)Ἄ,(0278.0)Ἅ,(0272.0)Ἆ,(026c.0)Ἇ,(0266.0)ἐ,(0022.0)⏎                                                   > ἉἊἋἌἍἎἏἐ
ἑ,(02b4.0)ἒ,(02ae.0)ἓ,(02a8.0)ἔ,(02a2.0)ἕ,(029c.0)἖,(0296.0)἗,(0290.0)Ἐ,(0022.0)⏎                                                   > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(02de.0)Ἒ,(02d8.0)Ἓ,(02d2.0)Ἔ,(02cc.0)Ἕ,(02c6.0)἞,(02c0.0)἟,(02ba.0)ἠ,(0022.0)⏎                                                   > ἙἚἛἜἝ἞἟ἠ
ἡ,(0308.0)ἢ,(0302.0)ἣ,(02fc.0)ἤ,(02f6.0)ἥ,(02f0.0)ἦ,(02ea.0)ἧ,(02e4.0)Ἠ,(0022.0)⏎                                                   > ἡἢἣἤἥἦἧἨ
Ἡ,(0332.0)Ἢ,(032c.0)Ἣ,(0326.0)Ἤ,(0320.0)Ἥ,(031a.0)Ἦ,(0314.0)Ἧ,(030e.0)ἰ,(0022.0)⏎                                                   > ἩἪἫἬἭἮἯἰ
ἱ,(035a.0)ἲ,(0354.0)ἳ,(034e.0)ἴ,(0348.0)ἵ,(0342.0)ἶ,(033c.0)ἷ,(0336.0)Ἰ,(0022.0)⏎                                                   > ἱἲἳἴἵἶἷἸ
Ἱ,(0382.0)Ἲ,(037c.0)Ἳ,(0376.0)Ἴ,(0370.0)Ἵ,(036a.0)Ἶ,(0364.0)Ἷ,(035e.0)ὀ,(0022.0)⏎                                                   > ἹἺἻἼἽἾἿὀ
ὁ,(03b3.0)ὂ,(03ad.0)ὃ,(03a7.0)ὄ,(03a1.0)ὅ,(039b.0)὆,(0395.0)὇,(038f.0)Ὀ,(0022.0)⏎                                                   > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(03db.0)Ὂ,(03d5.0)Ὃ,(03cf.0)Ὄ,(03c9.0)Ὅ,(03c3.0)὎,(03bd.0)὏,(03b7.0)ὐ,(0022.0)⏎                                                   > ὉὊὋὌὍ὎὏ὐ
ὑ,(0403.0)ὒ,(03fd.0)ὓ,(03f7.0)ὔ,(03f1.0)ὕ,(03eb.0)ὖ,(03e5.0)ὗ,(03df.0)὘,(0022.0)⏎                                                   > ὑὒὓὔὕὖὗ὘
Ὑ,(042b.0)὚,(0425.0)Ὓ,(041f.0)὜,(0419.0)Ὕ,(0413.0)὞,(040d.0)Ὗ,(0407.0)ὠ,(0022.0)⏎                                                   > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(0453.0)ὢ,(044d.0)ὣ,(0447.0)ὤ,(0441.0)ὥ,(043b.0)ὦ,(0435.0)ὧ,(042f.0)Ὠ,(0022.0)⏎                                                   > ὡὢὣὤὥὦὧὨ
Ὡ,(047b.0)Ὢ,(0475.0)Ὣ,(046f.0)Ὤ,(0469.0)Ὥ,(0463.0)Ὦ,(045d.0)Ὧ,(0457.0)ὰ,(0022.0)⏎                                                   > ὩὪὫὬὭὮὯὰ
ᾁ,(04aa.0)ᾂ,(04a4.0)ᾃ,(049e.0)ᾄ,(0498.0)ᾅ,(0492.0)ᾆ,(048c.0)ᾇ,(0486.0)ᾈ,(0022.0)⏎                                                   > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(04d2.0)ᾊ,(04cc.0)ᾋ,(04c6.0)ᾌ,(04c0.0)ᾍ,(04ba.0)ᾎ,(04b4.0)ᾏ,(04ae.0)ᾐ,(0022.0)⏎                                                   > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(04fa.0)ᾒ,(04f4.0)ᾓ,(04ee.0)ᾔ,(04e8.0)ᾕ,(04e2.0)ᾖ,(04dc.0)ᾗ,(04d6.0)ᾘ,(0022.0)⏎                                                   > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(0522.0)ᾚ,(051c.0)ᾛ,(0516.0)ᾜ,(0510.0)ᾝ,(050a.0)ᾞ,(0504.0)ᾟ,(04fe.0)ᾠ,(0022.0)⏎                                                   > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(054a.0)ᾢ,(0544.0)ᾣ,(053e.0)ᾤ,(0538.0)ᾥ,(0532.0)ᾦ,(052c.0)ᾧ,(0526.0)ᾨ,(0022.0)⏎                                                   > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(0572.0)ᾪ,(056c.0)ᾫ,(0566.0)ᾬ,(0560.0)ᾭ,(055a.0)ᾮ,(0554.0)ᾯ,(054e.0)ᾰ,(0022.0)⏎                                                   > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(059a.0)ᾲ,(0594.0)ᾳ,(058e.0)ᾴ,(0588.0)᾵,(0582.0)ᾶ,(057c.0)ᾷ,(0576.0)Ᾰ,(0022.0)⏎                                                   > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(05be.0)Ὰ,(05b8.0)Ά,(05b4.0)ᾼ,(05ae.0)᾽,(05a8.0)ι,(05a4.0)᾿,(059e.0)῀,(0022.0)⏎                                                   > ᾹᾺΆᾼ᾽ι᾿῀
῁,(05ef.0)ῂ,(05e9.0)ῃ,(05e3.0)ῄ,(05dd.0)῅,(05d7.0)ῆ,(05d1.0)ῇ,(05cb.0)Ὲ,(0022.0)⏎                                                   > ῁ῂῃῄ῅ῆῇῈ
ῑ,(0615.0)ῒ,(060f.0)ΐ,(060b.0)῔,(0605.0)῕,(05ff.0)ῖ,(05f9.0)ῗ,(05f3.0)Ῐ,(0022.0)⏎                                                   > ῑῒΐ῔῕ῖῗῘ
Ῑ,(063b.0)Ὶ,(0635.0)Ί,(0631.0)῜,(062b.0)῝,(0625.0)῞,(061f.0)῟,(0619.0)ῠ,(0022.0)⏎                                                   > ῙῚΊ῜῝῞῟ῠ
ῡ,(0661.0)ῢ,(065b.0)ΰ,(0657.0)ῤ,(0651.0)ῥ,(064b.0)ῦ,(0645.0)ῧ,(063f.0)Ῠ,(0022.0)⏎                                                   > ῡῢΰῤῥῦῧῨ
Ῡ,(0681.0)Ὺ,(067b.0)Ύ,(0677.0)Ῥ,(0671.0)῭,(066b.0)΅,(0667.0)\`,(0665.0)῰,(0022.0)⏎                                                   > ῩῪΎῬ῭΅\`῰
῱,(06a9.0)ῲ,(06a3.0)ῳ,(069d.0)ῴ,(0697.0)῵,(0691.0)ῶ,(068b.0)ῷ,(0685.0)Ὸ,(0022.0)⏎                                                   > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(06cb.0)ꦱ,(06c5.0)ꦗ,(06bf.0)ꦮ,(0022.0)⏎                                                                                           > ꦧꦱꦗꦮ
😀,(0707.0)😃,(06ff.0)😄,(06f7.0)😁,(06ef.0)😆,(06e7.0)🥹,(06df.0)😅,(06d7.0)😂,(0022.0)⏎                                           > 😀😃😄😁😆🥹😅😂
😌,(073f.0)😍,(0737.0)🥰,(072f.0)😘,(0727.0)😗,(071f.0)😙,(0717.0)😚,(070f.0)😋,(0022.0)⏎                                           > 😌😍🥰😘😗😙😚😋
😕,(077b.0)🙁,(0773.0)☹,(076d.0)️,(0767.0)😣,(075f.0)😖,(0757.0)😫,(074f.0)😩,(0747.0)🥺,(0022.0)⏎                                  > 😕🙁☹️😣😖😫😩🥺
😛,(07b3.0)😝,(07ab.0)😜,(07a3.0)🤪,(079b.0)🤨,(0793.0)🧐,(078b.0)🤓,(0783.0)😎,(0022.0)⏎                                           > 😛😝😜🤪🤨🧐🤓😎
😢,(07eb.0)😭,(07e3.0)😤,(07db.0)😠,(07d3.0)😡,(07cb.0)🤬,(07c3.0)🤯,(07bb.0)😳,(0022.0)⏎                                           > 😢😭😤😠😡🤬🤯😳
🙄,(0829.0)😯,(0821.0)😦,(0819.0)😧,(0811.0)😮,(0809.0)😲,(0801.0)🥱,(07f9.0)😴,(0022.0)⏎                                           > 🙄😯😦😧😮😲🥱😴
🤗,(0861.0)🤔,(0859.0)🫣,(0851.0)🤭,(0849.0)🫢,(0841.0)🫡,(0839.0)🤫,(0831.0)🫠,(0022.0)⏎                                           > 🤗🤔🫣🤭🫢🫡🤫🫠
🤣,(089d.0)🥲,(0895.0)☺,(088f.0)️,(0889.0)😊,(0881.0)😇,(0879.0)🙂,(0871.0)🙃,(0869.0)😉,(0022.0)⏎                                  > 🤣🥲☺️😊😇🙂🙃😉
🤤,(08f1.0)😪,(08e9.0)😮,(08e1.0)‍,(08db.0)💨,(08d3.0)😵,(08cb.0)😵,(08c3.0)‍,(08bd.0)💫,(08b5.0)🤐,(08ad.0)🥴,(08a5.0)🤢,(0022.0)⏎ > 🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤥,(0929.0)😶,(0921.0)🫥,(0919.0)😐,(0911.0)🫤,(0909.0)😑,(0901.0)🫨,(08f9.0)😬,(0022.0)⏎                                           > 🤥😶🫥😐🫤😑🫨😬
🤮,(095f.0)🤧,(0957.0)😷,(094f.0)🤒,(0947.0)🤕,(093f.0)🤑,(0937.0)🤠,(092f.0)😈,(0022.0)⏎                                           > 🤮🤧😷🤒🤕🤑🤠😈
🥵,(09b1.0)🥶,(09a9.0)😶,(09a1.0)‍,(099b.0)🌫,(0993.0)️,(098d.0)😱,(0985.0)😨,(097d.0)😰,(0975.0)😥,(096d.0)😓,(0022.0)⏎            > 🥵🥶😶‍🌫️😱😨😰😥😓
🥸,(09e9.0)🤩,(09e1.0)🥳,(09d9.0)😏,(09d1.0)😒,(09c9.0)😞,(09c1.0)😔,(09b9.0)😟,(0022.0)⏎                                           > 🥸🤩🥳😏😒😞😔😟"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(97) ] > With optimization and string table 1`] = `
"A,(0025.0)B,(0025.1)C,(0023.0)D,(0023.1)E,(0023.2)F,(0023.3)G,(0023.4)H,(0022.0)⏎                                                   > ABCDEFGH
H,(0029.0)e,(0029.1)r,(0027.0)e,(0022.0)⏎                                                                                           > Here
I,(002d.0)J,(002d.1)K,(002b.0)L,(002b.1)M,(002b.2)N,(002b.3)O,(002b.4)P,(0022.0)⏎                                                   > IJKLMNOP
Q,(0031.0)R,(0031.1)S,(002f.0)T,(002f.1)U,(002f.2)V,(002f.3)W,(002f.4)X,(0022.0)⏎                                                   > QRSTUVWX
T,(0035.0)h,(0035.1)e,(0033.0)y,(0022.0)⏎                                                                                           > They
Y,(0037.0)Z,(0022.0)⏎                                                                                                               > YZ
^,(0022.0)⏎                                                                                                                         > ^
\`,(0022.0)⏎                                                                                                                         > \`
a,(003f.0)⏎                                                                                                                         > a
----------b,(003b.0)c,(0039.0)d,(0039.1)e,(0039.2)f,(0039.3)g,(0039.4)h,(0022.0)⏎                                                   > abcdefgh
----------n,(003d.0)d,(0022.0)⏎                                                                                                     > and
----------r,(0027.0)e,(0022.0)⏎                                                                                                     > are
----------s,(0022.0)⏎                                                                                                               > as
b,(0046.0)e,(0022.0)⏎                                                                                                               > be
----------l,(0044.0)u,(0027.0)e,(0022.0)⏎                                                                                           > blue
c,(0049.0)s,(0049.1)p,(0049.2)e,(0049.3)l,(0049.4)l,(0022.0)⏎                                                                       > cspell
d,(0059.0)a,(004d.0)r,(004b.0)k,(0022.0)⏎                                                                                           > dark
--------------------y,(0022.0)⏎                                                                                                     > day
----------i,(0056.0)c,(0052.0)t,(0050.0)i,(0050.1)o,(0050.2)n,(0050.3)a,(0050.4)r,(0033.0)y,(0022.0)⏎                               > dictionary
--------------------s,(0054.0)a,(0054.1)b,(0054.2)l,(0027.0)e,(0022.0)⏎                                                             > disable
e,(005c.0)n,(0054.0)a,(0054.1)b,(0054.2)l,(0027.0)e,(0022.0)⏎                                                                       > enable
f,(0066.0)e,(005e.0)w,(0022.0)⏎                                                                                                     > few
----------i,(0064.0)r,(0062.0)s,(0060.0)t,(0022.0)⏎                                                                                 > first
g,(0069.0)r,(0069.1)e,(0069.2)e,(0069.3)n,(0022.0)⏎                                                                                 > green
i,(006d.0)j,(006d.1)k,(006b.0)l,(006b.1)m,(006b.2)n,(006b.3)o,(006b.4)p,(0022.0)⏎                                                   > ijklmnop
j,(006f.0)u,(0062.0)s,(0060.0)t,(0022.0)⏎                                                                                           > just
n,(0073.0)e,(0071.0)e,(003d.0)d,(0022.0)⏎                                                                                           > need
o,(0077.0)f,(0022.0)⏎                                                                                                               > of
----------n,(0022.0)⏎                                                                                                               > on
----------r,(0075.0)a,(0075.1)n,(0075.2)g,(0027.0)e,(0022.0)⏎                                                                       > orange
p,(0083.0)l,(0083.1)a,(0083.2)y,(0080.0)⏎                                                                                           > play
----------------------------------------e,(007b.0)d,(0022.0)⏎                                                                       > played
--------------------------------------------------r,(0022.0)⏎                                                                       > player
----------------------------------------i,(007e.0)n,(007e.1)g,(0022.0)⏎                                                             > playing
q,(0089.0)r,(0089.1)s,(0089.2)t,(0089.3)u,(0087.0)v,(0087.1)w,(0087.2)x,(0087.3)ἀ,(0022.0)⏎                                         > qrstuvwxἀ
r,(0071.0)e,(003d.0)d,(0022.0)⏎                                                                                                     > red
s,(008b.0)p,(008b.1)l,(008b.2)i,(0060.0)t,(0022.0)⏎                                                                                 > split
t,(008f.0)a,(008d.0)l,(008d.1)k,(0080.0)⏎                                                                                           > talk
----------------------------------------e,(007b.0)d,(0022.0)⏎                                                                       > talked
--------------------------------------------------r,(0022.0)⏎                                                                       > talker
----------------------------------------i,(007e.0)n,(007e.1)g,(0022.0)⏎                                                             > talking
----------h,(0027.0)e,(0022.0)⏎                                                                                                     > the
----------o,(0022.0)⏎                                                                                                               > to
u,(0093.0)s,(0027.0)e,(0022.0)⏎                                                                                                     > use
w,(0097.0)a,(008d.0)l,(008d.1)k,(0080.0)⏎                                                                                           > walk
----------------------------------------e,(007b.0)d,(0022.0)⏎                                                                       > walked
--------------------------------------------------r,(0022.0)⏎                                                                       > walker
----------------------------------------i,(007e.0)n,(007e.1)g,(0022.0)⏎                                                             > walking
----------o,(0095.0)r,(0095.1)d,(0095.2)s,(0022.0)⏎                                                                                 > words
y,(009a.0)e,(009a.1)l,(009a.2)l,(009a.3)o,(005e.0)w,(0022.0)⏎                                                                       > yellow
Έ,(00a4.0)Ὴ,(00a4.3)Ή,(00a2.1)ῌ,(00a2.4)῍,(00a0.2)῎,(009e.0)῏,(009e.3)ῐ,(0022.0)⏎                                                   > ΈῊΉῌ῍῎῏ῐ
ά,(00ae.0)ὲ,(00ac.1)έ,(00ac.3)ὴ,(00aa.1)ή,(00aa.3)ὶ,(00a8.1)ί,(00a8.3)ὸ,(0022.0)⏎                                                   > άὲέὴήὶίὸ
ό,(00b9.1)ὺ,(00b7.0)ύ,(00b7.2)ὼ,(00b5.0)ώ,(00b5.2)὾,(00b3.0)὿,(00b3.3)ᾀ,(0022.0)⏎                                                   > όὺύὼώ὾὿ᾀ
ພ,(00c1.2)າ,(00bf.0)ສ,(00bf.3)າ,(00bd.1)ລ,(00bd.4)າ,(00bb.2)ວ,(0022.0)⏎                                                             > ພາສາລາວ
ት,(00c5.1)ግ,(00c3.0)ር,(00c3.3)ኛ,(0022.0)⏎                                                                                           > ትግርኛ
አ,(00c7.1)ማ,(00c3.0)ር,(00c3.3)ኛ,(0022.0)⏎                                                                                           > አማርኛ
ᐃ,(00cd.0)ᓄ,(00cd.3)ᒃ,(00cb.1)ᑎ,(00cb.4)ᑐ,(00c9.2)ᑦ,(0022.0)⏎                                                                       > ᐃᓄᒃᑎᑐᑦ
ᐊ,(00d5.0)ᓂ,(00d5.3)ᔑ,(00d3.1)ᓈ,(00d3.4)ᐯ,(00d1.2)ᒧ,(00cf.0)ᐎ,(00cf.3)ᓐ,(0022.0)⏎                                                   > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(00e0.1)ᐦ,(00de.0)ᐃ,(00de.3)ᔭ,(00dc.1)ᐍ,(00dc.4)ᐏ,(00da.2)ᐣ,(0022.0)⏎                                                             > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(00ea.0)ἂ,(00ea.3)ἃ,(00e8.1)ἄ,(00e8.4)ἅ,(00e6.2)ἆ,(00e4.0)ἇ,(00e4.3)Ἀ,(0022.0)⏎                                                   > ἁἂἃἄἅἆἇἈ
Ἁ,(00f2.0)Ἂ,(00f2.3)Ἃ,(00f0.1)Ἄ,(00f0.4)Ἅ,(00ee.2)Ἆ,(00ec.0)Ἇ,(00ec.3)ἐ,(0022.0)⏎                                                   > ἉἊἋἌἍἎἏἐ
ἑ,(00fc.0)ἒ,(00fc.3)ἓ,(00fa.1)ἔ,(00fa.4)ἕ,(00f8.2)἖,(00f6.0)἗,(00f6.3)Ἐ,(0022.0)⏎                                                   > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(0106.0)Ἒ,(0106.3)Ἓ,(0104.1)Ἔ,(0104.4)Ἕ,(0102.2)἞,(0100.0)἟,(0100.3)ἠ,(0022.0)⏎                                                   > ἙἚἛἜἝ἞἟ἠ
ἡ,(0110.0)ἢ,(0110.3)ἣ,(010e.1)ἤ,(010e.4)ἥ,(010c.2)ἦ,(010a.0)ἧ,(010a.3)Ἠ,(0022.0)⏎                                                   > ἡἢἣἤἥἦἧἨ
Ἡ,(011a.0)Ἢ,(011a.3)Ἣ,(0118.1)Ἤ,(0118.4)Ἥ,(0116.2)Ἦ,(0114.0)Ἧ,(0114.3)ἰ,(0022.0)⏎                                                   > ἩἪἫἬἭἮἯἰ
ἱ,(0122.0)ἲ,(0122.3)ἳ,(0120.1)ἴ,(0120.4)ἵ,(011e.2)ἶ,(011c.0)ἷ,(011c.3)Ἰ,(0022.0)⏎                                                   > ἱἲἳἴἵἶἷἸ
Ἱ,(012a.0)Ἲ,(012a.3)Ἳ,(0128.1)Ἴ,(0128.4)Ἵ,(0126.2)Ἶ,(0124.0)Ἷ,(0124.3)ὀ,(0022.0)⏎                                                   > ἹἺἻἼἽἾἿὀ
ὁ,(013b.0)ὂ,(013b.3)ὃ,(0139.1)ὄ,(0139.4)ὅ,(0137.2)὆,(0135.0)὇,(0135.3)Ὀ,(0022.0)⏎                                                   > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(0143.0)Ὂ,(0143.3)Ὃ,(0141.1)Ὄ,(0141.4)Ὅ,(013f.2)὎,(013d.0)὏,(013d.3)ὐ,(0022.0)⏎                                                   > ὉὊὋὌὍ὎὏ὐ
ὑ,(014b.0)ὒ,(014b.3)ὓ,(0149.1)ὔ,(0149.4)ὕ,(0147.2)ὖ,(0145.0)ὗ,(0145.3)὘,(0022.0)⏎                                                   > ὑὒὓὔὕὖὗ὘
Ὑ,(0153.0)὚,(0153.3)Ὓ,(0151.1)὜,(0151.4)Ὕ,(014f.2)὞,(014d.0)Ὗ,(014d.3)ὠ,(0022.0)⏎                                                   > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(015b.0)ὢ,(015b.3)ὣ,(0159.1)ὤ,(0159.4)ὥ,(0157.2)ὦ,(0155.0)ὧ,(0155.3)Ὠ,(0022.0)⏎                                                   > ὡὢὣὤὥὦὧὨ
Ὡ,(0163.0)Ὢ,(0163.3)Ὣ,(0161.1)Ὤ,(0161.4)Ὥ,(015f.2)Ὦ,(015d.0)Ὧ,(015d.3)ὰ,(0022.0)⏎                                                   > ὩὪὫὬὭὮὯὰ
ᾁ,(0172.0)ᾂ,(0172.3)ᾃ,(0170.1)ᾄ,(0170.4)ᾅ,(016e.2)ᾆ,(016c.0)ᾇ,(016c.3)ᾈ,(0022.0)⏎                                                   > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(017a.0)ᾊ,(017a.3)ᾋ,(0178.1)ᾌ,(0178.4)ᾍ,(0176.2)ᾎ,(0174.0)ᾏ,(0174.3)ᾐ,(0022.0)⏎                                                   > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(0182.0)ᾒ,(0182.3)ᾓ,(0180.1)ᾔ,(0180.4)ᾕ,(017e.2)ᾖ,(017c.0)ᾗ,(017c.3)ᾘ,(0022.0)⏎                                                   > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(018a.0)ᾚ,(018a.3)ᾛ,(0188.1)ᾜ,(0188.4)ᾝ,(0186.2)ᾞ,(0184.0)ᾟ,(0184.3)ᾠ,(0022.0)⏎                                                   > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(0192.0)ᾢ,(0192.3)ᾣ,(0190.1)ᾤ,(0190.4)ᾥ,(018e.2)ᾦ,(018c.0)ᾧ,(018c.3)ᾨ,(0022.0)⏎                                                   > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(019a.0)ᾪ,(019a.3)ᾫ,(0198.1)ᾬ,(0198.4)ᾭ,(0196.2)ᾮ,(0194.0)ᾯ,(0194.3)ᾰ,(0022.0)⏎                                                   > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(01a2.0)ᾲ,(01a2.3)ᾳ,(01a0.1)ᾴ,(01a0.4)᾵,(019e.2)ᾶ,(019c.0)ᾷ,(019c.3)Ᾰ,(0022.0)⏎                                                   > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(01aa.0)Ὰ,(01a8.0)Ά,(01a8.2)ᾼ,(01a6.0)᾽,(01a6.3)ι,(01a4.0)᾿,(01a4.3)῀,(0022.0)⏎                                                   > ᾹᾺΆᾼ᾽ι᾿῀
῁,(01bb.0)ῂ,(01bb.3)ῃ,(01b9.1)ῄ,(01b9.4)῅,(01b7.2)ῆ,(01b5.0)ῇ,(01b5.3)Ὲ,(0022.0)⏎                                                   > ῁ῂῃῄ῅ῆῇῈ
ῑ,(01c3.0)ῒ,(01c3.3)ΐ,(01c1.1)῔,(01c1.4)῕,(01bf.2)ῖ,(01bd.0)ῗ,(01bd.3)Ῐ,(0022.0)⏎                                                   > ῑῒΐ῔῕ῖῗῘ
Ῑ,(01cb.0)Ὶ,(01cb.3)Ί,(01c9.1)῜,(01c9.4)῝,(01c7.2)῞,(01c5.0)῟,(01c5.3)ῠ,(0022.0)⏎                                                   > ῙῚΊ῜῝῞῟ῠ
ῡ,(01d3.0)ῢ,(01d3.3)ΰ,(01d1.1)ῤ,(01d1.4)ῥ,(01cf.2)ῦ,(01cd.0)ῧ,(01cd.3)Ῠ,(0022.0)⏎                                                   > ῡῢΰῤῥῦῧῨ
Ῡ,(01db.0)Ὺ,(01d9.2)Ύ,(01d9.4)Ῥ,(01d7.2)῭,(01d5.0)΅,(01d5.2)\`,(01d5.3)῰,(0022.0)⏎                                                   > ῩῪΎῬ῭΅\`῰
῱,(01e3.0)ῲ,(01e3.3)ῳ,(01e1.1)ῴ,(01e1.4)῵,(01df.2)ῶ,(01dd.0)ῷ,(01dd.3)Ὸ,(0022.0)⏎                                                   > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(01f7.1)ꦱ,(01f7.4)ꦗ,(01f5.2)ꦮ,(0022.0)⏎                                                                                           > ꦧꦱꦗꦮ
😀,(0205.0)😃,(0203.1)😄,(0201.0)😁,(0201.4)😆,(01ff.3)🥹,(01fd.2)😅,(01fb.1)😂,(0022.0)⏎                                           > 😀😃😄😁😆🥹😅😂
😌,(0211.0)😍,(020f.1)🥰,(020d.0)😘,(020d.4)😗,(020b.3)😙,(0209.2)😚,(0207.1)😋,(0022.0)⏎                                           > 😌😍🥰😘😗😙😚😋
😕,(021d.0)🙁,(021d.4)☹,(021b.2)️,(0219.0)😣,(0219.4)😖,(0217.3)😫,(0215.2)😩,(0213.1)🥺,(0022.0)⏎                                  > 😕🙁☹️😣😖😫😩🥺
😛,(0229.0)😝,(0227.1)😜,(0225.0)🤪,(0225.4)🤨,(0223.3)🧐,(0221.2)🤓,(021f.1)😎,(0022.0)⏎                                           > 😛😝😜🤪🤨🧐🤓😎
😢,(0235.0)😭,(0233.1)😤,(0231.0)😠,(0231.4)😡,(022f.3)🤬,(022d.2)🤯,(022b.1)😳,(0022.0)⏎                                           > 😢😭😤😠😡🤬🤯😳
🙄,(0247.1)😯,(0245.2)😦,(0243.0)😧,(0243.4)😮,(0241.3)😲,(023f.2)🥱,(023d.1)😴,(0022.0)⏎                                           > 🙄😯😦😧😮😲🥱😴
🤗,(0253.0)🤔,(0251.2)🫣,(024f.1)🤭,(024d.0)🫢,(024d.4)🫡,(024b.3)🤫,(0249.2)🫠,(0022.0)⏎                                           > 🤗🤔🫣🤭🫢🫡🤫🫠
🤣,(025f.0)🥲,(025d.0)☺,(025d.3)️,(025b.1)😊,(0259.0)😇,(0259.4)🙂,(0257.3)🙃,(0255.2)😉,(0022.0)⏎                                  > 🤣🥲☺️😊😇🙂🙃😉
🤤,(0271.0)😪,(026f.2)😮,(026d.1)‍,(026d.4)💨,(026b.3)😵,(0269.2)😵,(0267.1)‍,(0267.4)💫,(0265.3)🤐,(0263.2)🥴,(0261.1)🤢,(0022.0)⏎ > 🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤥,(027d.0)😶,(027b.1)🫥,(0279.0)😐,(0279.4)🫤,(0277.3)😑,(0275.2)🫨,(0273.1)😬,(0022.0)⏎                                           > 🤥😶🫥😐🫤😑🫨😬
🤮,(0289.0)🤧,(0287.2)😷,(0285.1)🤒,(0283.0)🤕,(0283.4)🤑,(0281.3)🤠,(027f.2)😈,(0022.0)⏎                                           > 🤮🤧😷🤒🤕🤑🤠😈
🥵,(029f.0)🥶,(029d.1)😶,(029b.0)‍,(029b.3)🌫,(0299.2)️,(0297.0)😱,(0297.4)😨,(0295.3)😰,(0293.2)😥,(0291.1)😓,(0022.0)⏎            > 🥵🥶😶‍🌫️😱😨😰😥😓
🥸,(02ab.0)🤩,(02a9.2)🥳,(02a7.0)😏,(02a7.4)😒,(02a5.3)😞,(02a3.2)😔,(02a1.1)😟,(0022.0)⏎                                           > 🥸🤩🥳😏😒😞😔😟"
`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > No optimization 1`] = `"o,(0003.0)p,(0005.0)t,(0007.0)i,(0009.0)m,(000b.0)i,(000d.0)z,(000f.0)a,(0011.0)t,(0013.0)i,(0015.0)o,(0017.0)n,(0002.0)⏎ > optimization"`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > With optimization 1`] = `"o,(0017.0)p,(0015.0)t,(0013.0)i,(0011.0)m,(000f.0)i,(000d.0)z,(000b.0)a,(0009.0)t,(0007.0)i,(0005.0)o,(0003.0)n,(0002.0)⏎ > optimization"`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > With optimization and string table 1`] = `"o,(0000.1)p,(0000.2)t,(0004.0)i,(0004.1)m,(0004.2)i,(0004.3)z,(0004.4)a,(0003.0)t,(0003.1)i,(0003.2)o,(0003.3)n,(0003.4)⏎ > optimization"`;
